# data_diff

./: README.md  pyproject.toml  spec.md  tasks.md  test_scenarios.md
src/: datacompare.py
src/data_diff/: __init__.py  column_mapper.py  comparison_engine.py  datasource.py
src/datacompare/: __init__.py  cli.py  column_mapper.py  comparison_engine.py  id_handler.py  report_generator.py
tests/: test_cli.py  test_column_mapper.py  test_comparison_engine.py  test_datasource.py  test_id_handler.py  test_report_generator.py
