[project]
name = "datacompare"
version = "0.1.0"
description = "A command-line tool for comparing two data sources (CSV/JSONL) and identifying differences"
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
