[project]
name = "data_diff"
version = "0.1.0"
description = "A command-line tool for comparing two data sources (CSV/JSONL) and identifying differences"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.0",  # This will pull in a compatible numpy version automatically
    "colorama>=0.4.6",  # For cross-platform colored output
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
data_diff = "src.datacompare.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
